--- a/BoidBox/BoidBox/BoidBox.vcxproj
+++ b/BoidBox/BoidBox/BoidBox.vcxproj
@@ -175,6 +175,7 @@ xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Boids.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Level1.h" />
     <ClInclude Include="List.h" />
@@ -191,6 +192,7 @@ xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     <ClInclude Include="Vector2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Boids.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Hunters.cpp" />
     <ClCompile Include="Level1.cpp" />
