--- a/BoidBox/BoidBox/BoidBox.vcxproj.filters
+++ b/BoidBox/BoidBox/BoidBox.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="BasicObstacles.h">
       <Filter>Header Files\Obstacles</Filter>
     </ClInclude>
+    <ClInclude Include="Math.h">
+      <Filter>Header Files\Helper</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -163,6 +166,9 @@
     </ClCompile>
     <ClCompile Include="BasicObstacles.cpp">
       <Filter>Source Files\Obstacles</Filter>
+    </ClCompile>
+    <ClCompile Include="Math.cpp">
+      <Filter>Source Files\Helper</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
