--- a/BoidBox/BoidBox/BoidBox.vcxproj.filters
+++ b/BoidBox/BoidBox/BoidBox.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClInclude Include="BoidTest.h">
       <Filter>Header Files\Engine</Filter>
     </ClInclude>
+    <ClInclude Include="Stream.h">
+      <Filter>Header Files\Helper</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
