--- a/BoidBox/BoidBox/BoidBox.vcxproj
+++ b/BoidBox/BoidBox/BoidBox.vcxproj
@@ -179,6 +179,7 @@ xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     <ClInclude Include="BoidTest.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="BasicObstacles.h" />
+    <ClInclude Include="SoundTest.h" />
     <ClInclude Include="Level1.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Math.h" />
@@ -209,6 +210,7 @@ xcopy "$(ProjectDir)FMOD\lib\fmod.dll" "$(OutDir)Assets\" /s /r /y /q</Command>
     <ClCompile Include="PlaceBlock.cpp" />
     <ClCompile Include="SoundSystem.cpp" />
     <ClCompile Include="BasicObstacles.cpp" />
+    <ClCompile Include="SoundTest.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteSource.cpp" />
     <ClCompile Include="Transform.cpp" />
